feat: patient mapper and fixes