@@ -1,71 +1,50 @@
 package hu.kvcspt.ctreportingtoolbackend.logic;
 
 import hu.kvcspt.ctreportingtoolbackend.dto.PatientDTO;
+import hu.kvcspt.ctreportingtoolbackend.mapper.PatientMapper;
 import hu.kvcspt.ctreportingtoolbackend.model.Patient;
 import hu.kvcspt.ctreportingtoolbackend.model.repository.PatientRepository;
 import lombok.AllArgsConstructor;
+import lombok.NonNull;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 @Service
 @AllArgsConstructor
 @Log4j2
 public class PatientService {
     private PatientRepository patientRepository;
     public List<PatientDTO> getAllPatients(){
-        List<Patient> patients = patientRepository.findAll();
-        return patients.stream().map(this::convertToDTO).toList();
+        return patientRepository.findAll().stream().map(PatientMapper.INSTANCE::fromEntity).collect(Collectors.toList());
     }
-    public PatientDTO getPatientDTOById(String id){
-        Patient patient = patientRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Patient does not exist!"));
-        return convertToDTO(patient);
+    public Optional<PatientDTO> getPatientById(@NonNull String id){
+        return patientRepository.findById(id).map(PatientMapper.INSTANCE::fromEntity);
     }
 
-    public Patient getPatientById(String id){
-        return patientRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Patient does not exist!"));
+    public PatientDTO updatePatient(@NonNull PatientDTO patientDTO) {
+        Patient patient = patientRepository
+                .findById(patientDTO.getId())
+                .orElse(PatientMapper.INSTANCE.toEntity(patientDTO));
+        return PatientMapper.INSTANCE.fromEntity(patientRepository.save(patient));
     }
 
-    public PatientDTO updatePatient(PatientDTO patientDTO) {
-        if (patientRepository.existsById(patientDTO.getId())) {
-            Patient patient = convertToEntity(patientDTO);
-            return convertToDTO(patientRepository.save(patient));
+    public PatientDTO createPatient(@NonNull PatientDTO patientDTO){
+        Patient patient = PatientMapper.INSTANCE.toEntity(patientDTO);
+        Patient savedPatient = patientRepository.save(patient);
+        return PatientMapper.INSTANCE.fromEntity(savedPatient);
+    }
+
+    public void deletePatient(@NonNull String id){
+        if (patientRepository.existsById(id)) {
+            patientRepository.deleteById(id);
+            log.debug("Patient is deleted successfully");
+        } else {
+            throw new NoSuchElementException("Patient with ID " + id + " not found.");
         }
-        throw new IllegalArgumentException("Patient not found!");
-    }
-
-    public PatientDTO createPatient(PatientDTO patientDTO){
-        Patient patient = convertToEntity(patientDTO);
-        return convertToDTO(patientRepository.save(patient));
-    }
-
-    public Patient createPatient(Patient patient){
-        return patientRepository.save(patient);
-    }
-
-    public void deletePatient(PatientDTO patientDTO){
-        patientRepository.delete(convertToEntity(patientDTO));
-        log.debug("Patient is deleted successfully");
-    }
-    public Patient convertToEntity(PatientDTO patientDTO) {
-        return Patient.builder()
-                .id(patientDTO.getId())
-                .name(patientDTO.getName())
-                .dateOfBirth(patientDTO.getDateOfBirth())
-                .gender(patientDTO.getGender())
-                .phoneNumber(patientDTO.getPhoneNumber())
-                .address(patientDTO.getAddress())
-                .build();
-    }
-
-    public PatientDTO convertToDTO(Patient patient) {
-        return PatientDTO.builder()
-                .id(patient.getId())
-                .name(patient.getName())
-                .dateOfBirth(patient.getDateOfBirth())
-                .gender(patient.getGender())
-                .phoneNumber(patient.getPhoneNumber())
-                .address(patient.getAddress())
-                .build();
     }
 }
